--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.4",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/query-string": "^6.3.0",
+    "@types/react-datepicker": "^7.0.0",
     "@uploadthing/react": "^6.7.2",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +32,7 @@
     "next": "14.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "shadcn-ui": "^0.8.0",
