--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.1.0",
     "@types/query-string": "^6.3.0",
     "@types/react-datepicker": "^7.0.0",
     "@uploadthing/react": "^6.7.2",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "shadcn-ui": "^0.8.0",
+    "stripe": "^16.5.0",
     "svix": "^1.25.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
